--- a/Project-3-submission/React-web-app/todo-app/package.json
+++ b/Project-3-submission/React-web-app/todo-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/kailyncleere/quickstart-software-engineering-kailyncleere/tree/main/Project-3-submission/React-web-app/todo-app",
+  "homepage": "https://kailyncleere.github.io/quickstart-software-engineering-kailyncleere/tree/main/Project-3-submission/React-web-app/todo-app",
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
