--- a/Project-3-submission/React-web-app/todo-app/package.json
+++ b/Project-3-submission/React-web-app/todo-app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo-app",
+  "homepage":"https://kailyncleere.github.io/quickstart-software-engineering-kailyncleere/tree/main/Project-3-submission/React-web-app/todo-app"
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,10 +11,13 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
